--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -346,6 +346,17 @@ table.custom-table tr td {
   }
 }
 
+aside.explore {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+@media screen and (max-width: 1099px) {
+  aside.explore:not(.bottom) {
+    display: none;
+  }
+}
+
 #chart-container .main {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
@@ -1414,17 +1425,6 @@ table.custom-table tr td {
   }
 }
 
-#blogs aside {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-}
-
-@media screen and (max-width: 1100px) {
-  #blogs aside {
-    display: none;
-  }
-}
-
 @media screen and (min-width: 1101px) {
   #blogs .main {
     padding-right: 1.5rem;
@@ -1570,7 +1570,7 @@ table.custom-table tr td {
   padding: 0 3.25rem;
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1919px) {
   #refer-and-invest .btn {
     height: 40px;
     padding: 0 2rem;
@@ -1745,12 +1745,6 @@ table.custom-table tr td {
   }
 }
 
-@media screen and (max-width: 1460px) and (min-width: 1367px) {
-  #refer-and-invest .cards .card {
-    width: 33%;
-  }
-}
-
 @media screen and (max-width: 768px) {
   #refer-and-invest .cards .card {
     height: 260px;
@@ -1814,13 +1808,13 @@ table.custom-table tr td {
   width: 83px;
 }
 
-@media screen and (min-width: 1367px) {
+@media screen and (min-width: 1920px) {
   #refer-and-invest .cards .card .img img {
     width: 198px;
   }
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1919px) {
   #refer-and-invest .cards .card .img img {
     width: 120px;
   }
@@ -1913,25 +1907,19 @@ table.custom-table tr td {
   }
 }
 
-@media screen and (max-width: 1809px) {
-  #refer-and-invest .cards .card .text .sub-section .small-text {
-    min-height: 46px;
-  }
-}
-
-@media screen and (max-width: 1809px) and (min-width: 1367px) {
-  #refer-and-invest .cards .card .text .sub-section .small-text {
-    font-size: 16px !important;
-  }
-}
-
 @media screen and (max-width: 1150px) and (min-width: 992px) {
   #refer-and-invest .cards .card .text .sub-section .small-text {
     font-size: 12px !important;
   }
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1023px) and (min-width: 992px) {
+  #refer-and-invest .cards .card .text .sub-section .small-text {
+    font-size: 11px !important;
+  }
+}
+
+@media screen and (max-width: 1919px) {
   #refer-and-invest .cards .card .text .sub-section .small-text {
     min-height: 36px;
   }
@@ -1948,43 +1936,15 @@ table.custom-table tr td {
   min-height: unset;
 }
 
-@media screen and (max-width: 1809px) and (min-width: 1367px) {
-  #refer-and-invest .cards .card .text .sub-section .big-text {
-    font-size: 44px !important;
-  }
-}
-
 @media screen and (max-width: 1150px) and (min-width: 992px) {
   #refer-and-invest .cards .card .text .sub-section .big-text {
     font-size: 36px !important;
   }
 }
 
-@media screen and (max-width: 575px) {
-  #refer-and-invest .cards .card .text .sub-section .big-text {
-    margin-top: 0 !important;
-  }
-}
-
-#refer-and-invest .cards .card .text .sub-section:nth-child(1) {
-  width: 10%;
-}
-
-@media screen and (min-width: 769px) {
+@media screen and (max-width: 1919px) {
   #refer-and-invest .cards .card .text .sub-section:nth-child(1) {
-    min-width: 86px;
-  }
-}
-
-@media screen and (min-width: 1810px) {
-  #refer-and-invest .cards .card .text .sub-section:nth-child(1) {
-    min-width: 166px;
-  }
-}
-
-@media screen and (max-width: 1366px) {
-  #refer-and-invest .cards .card .text .sub-section:nth-child(1) {
-    min-width: 67px;
+    width: 67px;
   }
 }
 
@@ -2001,7 +1961,7 @@ table.custom-table tr td {
   }
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1919px) {
   #refer-and-invest .cards .card .text .sub-section:nth-child(4) {
     -webkit-box-flex: 0;
         -ms-flex-positive: 0;
@@ -2010,10 +1970,16 @@ table.custom-table tr td {
   }
 }
 
+@media screen and (max-width: 991px) {
+  #refer-and-invest .cards .card .text .sub-section:nth-child(4) {
+    margin-top: 1.5rem;
+  }
+}
+
 @media screen and (max-width: 768px) {
   #refer-and-invest .cards .card .text .sub-section:nth-child(4) {
     width: 100%;
-    margin-top: 1.5rem;
+    margin-top: 2.5rem;
   }
 }
 
@@ -2025,7 +1991,7 @@ table.custom-table tr td {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-top: 6.5rem;
+    margin-top: 4rem;
   }
 }
 
@@ -2088,6 +2054,12 @@ table.custom-table tr td {
   }
 }
 
+@media screen and (max-width: 1919px) and (min-width: 769px) {
+  #refer-and-invest .cards .card .text.refer .referral h3 {
+    max-width: 318px;
+  }
+}
+
 #refer-and-invest .cards .card .text.refer .copy {
   position: relative;
   background-color: #fff;
@@ -2111,22 +2083,28 @@ table.custom-table tr td {
   width: 100%;
 }
 
-@media screen and (max-width: 992px) and (min-width: 769px) {
+@media screen and (max-width: 991px) and (min-width: 769px) {
   #refer-and-invest .cards .card .text.refer .sub-section.social-sub-section {
     width: 48%;
     margin-left: 0.75rem;
   }
 }
 
-@media screen and (min-width: 1367px) {
+@media screen and (min-width: 1920px) {
   #refer-and-invest .cards .card .text.refer .sub-section.social-sub-section {
     margin-top: 5.5rem;
   }
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1919px) and (min-width: 992px) {
   #refer-and-invest .cards .card .text.refer .sub-section.social-sub-section {
-    margin-top: 2.5rem;
+    margin-top: 4.5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #refer-and-invest .cards .card .text.refer .sub-section.social-sub-section {
+    margin-top: 2rem;
   }
 }
 
@@ -2142,7 +2120,7 @@ table.custom-table tr td {
   }
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1919px) {
   #refer-and-invest .cards .card .text.refer .social {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -2153,7 +2131,7 @@ table.custom-table tr td {
   }
 }
 
-@media screen and (max-width: 1366px) and (min-width: 769px) {
+@media screen and (max-width: 1919px) and (min-width: 769px) {
   #refer-and-invest .cards .card .text.refer .social {
     margin-top: 2rem !important;
   }
@@ -2167,7 +2145,7 @@ table.custom-table tr td {
   margin-right: 0;
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1919px) {
   #refer-and-invest .cards .card .text.refer .social a {
     width: 24px;
     margin-right: 0.975rem;
@@ -2205,7 +2183,12 @@ table.custom-table tr td {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  margin-top: 2rem;
+}
+
+@media screen and (min-width: 992px) {
+  #refer-and-invest .cards .card .text .reminder {
+    margin-top: 4.5rem;
+  }
 }
 
 @media screen and (max-width: 991px) {
@@ -2216,9 +2199,14 @@ table.custom-table tr td {
             justify-content: flex-end !important;
   }
   #refer-and-invest .cards .card .text .reminder .btn {
-    margin-top: 2rem;
     width: 100%;
     max-width: 174px;
+  }
+}
+
+@media screen and (max-width: 991px) and (min-width: 992px) {
+  #refer-and-invest .cards .card .text .reminder .btn {
+    margin-top: 2rem;
   }
 }
 
@@ -2295,10 +2283,6 @@ table.custom-table tr td {
   .transactions-right {
     padding-right: 1.5rem !important;
   }
-}
-
-.transactions-right .title .back {
-  top: 0.75rem !important;
 }
 
 #transactions .title {
@@ -2434,12 +2418,21 @@ table.custom-table tr td {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+#transactions .transactions-body .transaction > *:nth-child(2) {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#transactions .transactions-body .transaction > *:nth-child(3) {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 #transactions .transactions-body .transaction > *:nth-child(1) {
@@ -2448,7 +2441,7 @@ table.custom-table tr td {
 
 @media screen and (max-width: 1270px) {
   #transactions .transactions-body .transaction > *:nth-child(1) {
-    width: 33.33%;
+    width: 27%;
   }
 }
 
@@ -2476,7 +2469,7 @@ table.custom-table tr td {
 
 @media screen and (max-width: 1100px) {
   #transactions .transactions-body .transaction > *:nth-child(2) {
-    width: 20%;
+    width: 25%;
   }
 }
 
@@ -2506,12 +2499,12 @@ table.custom-table tr td {
 }
 
 #transactions .transactions-body .transaction > *:nth-child(3) {
-  width: 25%;
+  width: 30%;
 }
 
 @media screen and (max-width: 1590px) {
   #transactions .transactions-body .transaction > *:nth-child(3) {
-    width: 25%;
+    width: 30%;
   }
 }
 
@@ -2523,13 +2516,7 @@ table.custom-table tr td {
 
 @media screen and (max-width: 991px) {
   #transactions .transactions-body .transaction > *:nth-child(3) {
-    width: 30%;
-  }
-}
-
-@media screen and (max-width: 991px) {
-  #transactions .transactions-body .transaction > *:nth-child(3) {
-    width: 31%;
+    width: 40%;
   }
 }
 
@@ -2541,7 +2528,7 @@ table.custom-table tr td {
 
 @media screen and (max-width: 675px) {
   #transactions .transactions-body .transaction > *:nth-child(3) {
-    width: 37%;
+    width: 40%;
   }
 }
 
@@ -2637,13 +2624,13 @@ table.custom-table tr td {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 769px) {
   #transaction h2 .back {
-    top: 2.5rem;
-    display: block;
+    position: relative;
+    top: 1rem;
+    left: -0.125rem;
   }
 }
 
@@ -2967,11 +2954,32 @@ table.custom-table tr td {
   text-align: center;
   -webkit-transform: translateY(0.5rem);
           transform: translateY(0.5rem);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media screen and (max-width: 575px) {
   #profile .deactivate .right {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     width: 100%;
+  }
+}
+
+@media screen and (min-width: 1367px) {
+  .notifications-sidenav-right .lower-content {
+    padding-top: 110px !important;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .notifications-sidenav-right .lower-content {
+    padding-top: 90px !important;
   }
 }
 
@@ -2995,6 +3003,32 @@ table.custom-table tr td {
 @media screen and (max-width: 768px) {
   #notifications {
     padding-top: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  #notifications .top-fixed-bar {
+    padding: 0 7rem 2rem;
+    background: #fff;
+    position: fixed;
+    top: 132px;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    -webkit-box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
+  }
+  #notifications .top-fixed-bar .head {
+    max-width: 1675px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 1366px) and (min-width: 769px) {
+  #notifications .top-fixed-bar {
+    top: 116px;
+    padding: 0 5rem 2rem;
   }
 }
 
