fixes profile page changes

--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1926,7 +1926,7 @@ textarea.custom-input.with-outline,
   /*style the arrow inside the select element:*/
   border: 1px solid #d8d8d8 !important;
   border-radius: 5px;
-  padding: 0.5rem !important;
+  padding: 0.5rem 1rem !important;
   /*point the arrow upwards when the select box is open (active):*/
 }
 
