--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -1754,7 +1754,7 @@ textarea.custom-input,
   /*style the arrow inside the select element:*/
   border: 1px solid $color7 !important;
   border-radius: 5px;
-  padding: 0.5rem !important;
+  padding: 0.5rem 1rem !important;
 
   &.select-arrow-active {
     border-color: $color1 !important;
