--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2680,8 +2680,19 @@ aside.explore {
       border-bottom: 1px solid $color19;
 
       .action {
+        opacity: 0;
+        pointer-events: none;
+        transition: 0.4s ease;
+
         @media screen and (max-width: 525px) {
           display: none;
+        }
+      }
+
+      &:hover {
+        .action {
+          opacity: 1;
+          pointer-events: all;
         }
       }
 
