fixes tab hover issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3108,6 +3108,13 @@ aside.explore {
   pointer-events: all;
 }
 
+@media screen and (max-width: 768px) {
+  #notifications .body .item {
+    opacity: 1;
+    pointer-events: all;
+  }
+}
+
 #notifications .body .item h5 {
   margin-top: 0.5rem;
 }
