--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2696,6 +2696,11 @@ aside.explore {
         }
       }
 
+      @media screen and (max-width: 768px) {
+        opacity: 1;
+        pointer-events: all;
+      }
+
       h5 {
         margin-top: 0.5rem;
 
