fixes tab hover issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3110,8 +3110,8 @@ aside.explore {
 
 @media screen and (max-width: 768px) {
   #notifications .body .item .action {
-    opacity: 1;
-    pointer-events: all;
+    opacity: 0;
+    pointer-events: none;
   }
 }
 
